# erosion

./: .gitignore  Cargo.toml  README.md
kernels/: compile-kernels.sh  droplet.glsl  erosion_blur.comp  erosion_blur.comp.spv  init_droplets.comp  init_droplets.comp.spv  init_heightmap.comp  init_heightmap.comp.spv  sim_step.comp  sim_step.comp.spv
notes/: access.md  blur.comp  impl_steps.md  sim_step.comp
shaders/: compile-shaders.sh  droplet.vert  droplet.vert.spv  heightmap.vert  heightmap.vert.spv  unlit.frag.spv  unlit.vert  unlit.vert.spv  unlit_tex.frag  unlit_tex.frag.spv
src/: config.rs  main.rs  simulation.rs
