[package]
name = "erosion"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
#watertender = { path = "../watertender" }
watertender = { git = "https://github.com/Masterchef365/watertender.git", branch = "sep_renderpass" }
bytemuck = "1.5"
erupt = "0.18"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
